03-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: k8s-live-demo
spec:
  selector: {app: demo-web}
  ports:
    - {name: http, port: 80, targetPort: http}
