04-redis-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: k8s-live-demo
spec:
  clusterIP: None
  selector: {app: demo-redis}
  ports:
    - {name: redis, port: 6379, targetPort: redis}
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: k8s-live-demo
spec:
  serviceName: redis-headless
  replicas: 1
  selector:
    matchLabels: {app: demo-redis}
  template:
    metadata:
      labels: {app: demo-redis}
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          args: ["--appendonly", "yes"]
          ports:
            - {name: redis, containerPort: 6379}
          resources:
            requests: {cpu: 25m, memory: 64Mi}
            limits: {cpu: 250m, memory: 256Mi}
          readinessProbe:
            exec: {command: ["redis-cli", "ping"]}
            initialDelaySeconds: 2
            periodSeconds: 5
          volumeMounts:
            - {name: data, mountPath: /data}
  volumeClaimTemplates:
    - metadata: {name: data}
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests: {storage: 1Gi}
